--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -111,7 +111,7 @@ font:
   # Bold font face
   bold:
     family: FiraCode Nerd Font
-    style: Bold
+    style: Medium
 
   # Italic font face
   italic:
