misch config bspwm and more

--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -35,21 +35,21 @@ bar_enabled		= 1
 bar_border_width	= 0
 # bar_border[1]		= rgb:00/80/80
 # bar_border_unfocus[1]	= rgb:00/40/40
-bar_color[1]		= blue
+bar_color[1]		= rgb:50/100/100
 # bar_color_selected[1]	= rgb:00/80/80
 # bar_font_color[1]	= rgb:a0/a0/a0
 # bar_font_color_selected	= black
-bar_font		= Hack Nerd Font:pixelsize=20:antialias=true
+bar_font		= mononoki Nerd Font:pixelsize=20:antialias=true
 # bar_font_pua		= Typicons:pixelsize=14:antialias=true
 # bar_action		= baraction.sh
 # bar_action_expand	= 0
 # bar_justify		= left
 # bar_format		= +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
 # workspace_indicator	= listcurrent,listactive,markcurrent,printnames
-# bar_at_bottom		= 1
+bar_at_bottom		= 1
 # stack_enabled		= 1
-# clock_enabled		= 1
-# clock_format		= %a %b %d %R %Z %Y
+clock_enabled		= 1
+clock_format		= %a %b %d %R %Z %Y
 # iconic_enabled	= 0
 maximize_hide_bar	= 1
 # window_class_enabled	= 0
@@ -72,7 +72,7 @@ maximize_hide_bar	= 1
 # autorun		= ws[2]:xombrero http://www.openbsd.org
 
 # Customize workspace layout at start
-layout		= ws[1]:4:0:0:0:vertical
+layout		= ws[1]:0:0:0:0:vertical
 layout		= ws[2]:0:0:0:0:horizontal
 layout		= ws[3]:0:0:0:0:fullscreen
 layout		= ws[4]:4:0:0:0:vertical_flip
@@ -135,9 +135,18 @@ bind[]		= MOD+q			# disable menu
 ## Key bindings for United States (us) keyboards
 # unbind with: bind[] = <keys>
 
-# window
+bind[term]		          = MOD+Shift+Return
+bind[term]		          = MOD+backslash
+bind[wind_del]		      = MOD+q
+bind[wind_kill]		      = MOD+Shift+x
+bind[restart]		        = MOD+Shift+r
+bind[quit]		          = MOD+Shift+q
+bind[menu]		          = MOD+p
+bind[bar_toggle]	      = MOD+b
+bind[master_grow]	      = MOD+l
+bind[master_shrink]	    = MOD+h
 
-bind[bar_toggle]	= MOD+b
+
 bind[bar_toggle_ws]	= MOD+Shift+b
 bind[button2]		= MOD+v
 bind[cycle_layout]	= MOD+space
@@ -156,10 +165,7 @@ bind[initscr]		= MOD+Shift+i
 bind[lock]		= MOD+Shift+Delete
 bind[master_add]	= MOD+comma
 bind[master_del]	= MOD+period
-bind[master_grow]	= MOD+l
-bind[master_shrink]	= MOD+h
 bind[maximize_toggle]	= MOD+e
-bind[menu]		= MOD+p
 bind[move_down]		= MOD+Shift+bracketright
 bind[move_left]		= MOD+bracketleft
 bind[move_right]	= MOD+bracketright
@@ -180,9 +186,7 @@ bind[mvws_4]		= MOD+Shift+4
 bind[mvws_5]		= MOD+Shift+5
 bind[mvws_6]		= MOD+Shift+6
 bind[name_workspace]	= MOD+Shift+slash
-bind[quit]		= MOD+Shift+q
 #bind[raise_toggle]	= MOD+Shift+r
-bind[restart]		= MOD+Shift+r
 bind[rg_1]		= MOD+KP_End
 bind[rg_2]		= MOD+KP_Down
 bind[rg_3]		= MOD+KP_Next
@@ -204,13 +208,10 @@ bind[stack_reset]	= MOD+Shift+space
 bind[swap_main]		= MOD+Return
 bind[swap_next]		= MOD+Shift+j
 bind[swap_prev]		= MOD+Shift+k
-bind[term]		= MOD+Shift+Return
 bind[uniconify]		= MOD+Shift+w
 bind[version]		= MOD+Shift+v
 bind[width_grow]	= MOD+equal
 bind[width_shrink]	= MOD+minus
-bind[wind_del]		= MOD+q
-bind[wind_kill]		= MOD+Shift+x
 bind[ws_1]		= MOD+1
 bind[ws_2]		= MOD+2
 bind[ws_3]		= MOD+3
