polybar and bspwm config, misc

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -108,26 +108,26 @@ scrolling:
 font:
   # Normal (roman) font face
   normal:
-    family: CaskaydiaCove NF
+    family: FiraCode Nerd Font
     style: Regular
 
   # Bold font face
   bold:
-    family: CaskaydiaCove NF
-    style: Bold
+    family: FiraCode Nerd Font
+    style: Medium
 
   # Italic font face
   italic:
-    family: CaskaydiaCove NF
+    family: FiraCode Nerd Font
     style: Italic
 
   # Bold italic font face
   bold_italic:
-    family: CaskaydiaCove NF
+    family: FiraCode Nerd Font
     style: Bold Italic
 
   # Point size
-  size: 15.0
+  size: 13.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
