--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -21,6 +21,8 @@ window:
   #  columns: 0
   #  lines: 0
 
+  #nieuw, nu hier
+  opacity: 0.80
   # Window position (changes require restart)
   #
   # Specified in number of pixels.
@@ -313,7 +315,8 @@ colors: *darkside
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.85
+#depreciated, now in windows section
+  #background_opacity: 0.85
 # background_opacity: 0.95
 
 #selection:
