--- a/.config/mc/panels.ini
+++ b/.config/mc/panels.ini
@@ -35,5 +35,5 @@ list_format=full
 filter_flags=7
 
 [Dirs]
-current_is_left=true
-other_dir=/home/jga/.config/mc
+current_is_left=false
+other_dir=/home/jga/.ssh
