--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -10,7 +10,7 @@ print_info() {
     info "Memory" memory
     info "Kernel" kernel
     info "Uptime" uptime
-    info "Packages" packages
+    #info "Packages" packages
     info "Shell" shell
     #info "Resolution" resolution
     #info "DE" de
