--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -2,7 +2,7 @@ theme = "heisenberg"
 
 [editor]
 line-number = "absolute"
-mouse = false
+mouse = true
 true-color = true
 scrolloff = 3
 bufferline = "multiple"
@@ -18,6 +18,8 @@ hidden = true
 
 [keys.normal]
 ";" = "command_mode"
+"tab" = ":bn"
+"A-w" = "rotate_view"
 
 [keys.insert.j]
 j = "normal_mode" # Maps `jj` to exit insert mode
