--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -14,7 +14,7 @@ normal = "block"
 select = "underline"
 
 [editor.file-picker]
-hidden = true
+hidden = false
 
 [keys.normal]
 ";" = "command_mode"
