minor tweaks, added debian update selection, pitemp

--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -11,7 +11,7 @@ print_info() {
     info "Kernel" kernel
     info "Uptime" uptime
     #info "Packages" packages
-    info "Shell" shell
+    #info "Shell" shell
     #info "Resolution" resolution
     #info "DE" de
     #info "WM" wm
@@ -21,7 +21,7 @@ print_info() {
     #info "Terminal" term
     #info "Terminal Font" term_font
     #info "GPU" gpu
-
+    info "CPU speed" cpu_speed
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
     info "Disk" disk
@@ -793,7 +793,8 @@ thumbnail_dir="${XDG_CACHE_HOME:-${HOME}/.cache}/thumbnails/neofetch"
 #
 # See this wiki page to learn about the fit and fill options.
 # https://github.com/dylanaraps/neofetch/wiki/What-is-Waifu-Crop%3F
-crop_mode="normal"
+#crop_mode="normal"
+crop_mode="fit"
 
 # Crop offset
 # Note: Only affects 'normal' crop mode.
