Added testdiskspeed and neofetch config

--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -20,13 +20,12 @@ print_info() {
     #info "Icons" icons
     #info "Terminal" term
     #info "Terminal Font" term_font
-    #info "GPU" gpu
-    info "CPU speed" cpu_speed
+    info "GPU" gpu
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
     info "Disk" disk
     # info "Battery" battery
-    # info "Font" font
+    info "Font" font
     # info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
     info "Local IP" local_ip
@@ -237,7 +236,7 @@ cpu_cores="logical"
 # C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
 # F:   'Intel i7-6500U (4) @ 3.1GHz [82.0°F]'
 # off: 'Intel i7-6500U (4) @ 3.1GHz'
-cpu_temp="off"
+cpu_temp="on"
 
 
 # GPU
