added beta hyprland config

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -111,21 +111,26 @@ font:
   # Normal (roman) font face
   normal:
     family: Input NFM
+    #family: FiraMono Nerd Font
+    #family: Input NerdFont Mono
     style: Regular
 
   # Bold font face
   bold:
     family: Input NFM
+    #family: FiraMono Nerd Font
     style: Bold
 
   # Italic font face
   italic:
     family: Input NFM
+    #family: FiraMono Nerd Font
     style: Italic
 
   # Bold italic font face
   bold_italic:
     family: Input NFM
+    #family: FiraMono Nerd Font
     style: Bold Italic
 
   # Point size
