--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,16 +2,8 @@
 
 #: Fonts {{{
 
-#: kitty has very powerful font management. You can configure
-#: individual font faces and even specify special fonts for particular
-#: characters.
-
-# font_family      monospace
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
-
-font_family      Input NFM
+#font_family      FiraMono Nerd Font
+font_family      Input NerdFont Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
