--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,8 +2,8 @@
 
 #: Fonts {{{
 
-#font_family      FiraMono Nerd Font
-font_family      Input NerdFont Mono
+font_family      Input
+#font_family      Source Code Pro
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -21,7 +21,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12.0
+font_size 14.0
 
 #: Font size (in pts)
 
@@ -56,7 +56,15 @@ font_size 12.0
 #: separated by hyphens. This option can be specified multiple times.
 #: The syntax is::
 
-#:     symbol_map codepoints Font Family Name
+#symbol_map codepoints Symbols Nerd Font 
+# Nerd Fonts v2.3.3
+#zie hier https://sw.kovidgoyal.net/kitty/conf/#opt-kitty.symbol_map
+# en hier https://sw.kovidgoyal.net/kitty/faq/
+# Nerd Fonts v2.3.3
+
+symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E6AA,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF,U+F0001-U+F1AF0 Symbols Nerd Font Mono
+#symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E6AA,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF,U+F0001-U+F1AF0 Input
+
 
 # narrow_symbols
 
@@ -73,6 +81,7 @@ font_size 12.0
 #:     narrow_symbols codepoints [optionally the number of cells]
 
 # disable_ligatures never
+disable_ligatures always
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them. You can tell kitty to not render
