--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -126,6 +126,7 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 $alterMod = ALT
+#$term = kitty
 $term = kitty
 $browser = brave
 
@@ -140,7 +141,8 @@ $browser = brave
 # i -> ignore mods, will ignore modifiers.
 #
 #
-bind = $mainMod, T, exec, kitty
+bind = $mainMod, T, exec, $term
+bind = $mainMod, Return, exec, $term
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, nvim
@@ -218,3 +220,16 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+#################### It just works™ keybinds ###################
+# Volume
+bindl = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindle = , XF86AudioRaiseVolume, exec, ~/.config/eww/scripts/volume osd &
+bindle = , XF86AudioLowerVolume, exec, ~/.config/eww/scripts/volume osd &
+bindl = , XF86AudioMute, exec, ~/.config/eww/scripts/volume osd &
+
+# Brightness
+bindle=, XF86MonBrightnessUp, exec, light -A 3 && ~/.config/eww/scripts/brightness osd &
+bindle=, XF86MonBrightnessDown, exec, light -U 3 && ~/.config/eww/scripts/brightness osd &
