--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -126,7 +126,6 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 $alterMod = ALT
-#$term = kitty
 $term = kitty
 $browser = brave
 
@@ -201,6 +200,16 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
+# bind = F1, 1, workspace, 1
+# bind = F2, 2, workspace, 2
+# bind = F3, 3, workspace, 3
+# bind = F4, 4, workspace, 4
+# bind = F5, 5, workspace, 5
+# bind = F6, 6, workspace, 6
+# bind = F7, 7, workspace, 7
+# bind = F8, 8, workspace, 8
+# bind = F9, 9, workspace, 9
+#
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
