--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,6 +3,7 @@
 #: Fonts {{{
 
 font_family      Input
+#font_family Lilex Nerd Font Mono 
 #font_family      Source Code Pro
 bold_font        auto
 italic_font      auto
