--- a/dockers/docker-compose.yml
+++ b/dockers/docker-compose.yml
@@ -6,6 +6,41 @@ version: "3.8"
 #  port:  host: in container
 
 services:
+  
+  pihole:
+    image: pihole/pihole:latest
+    container_name: pihole
+    restart: unless-stopped
+    ports:
+      - "53:53/tcp"
+      - "53:53/udp"
+      #- "67:67/udp" # Only required if you are using Pi-hole as your DHCP server
+      - "90:80"
+    environment:
+      TZ: Europe/Amsterdam
+      #FTLCONF_LOCAL_IPV4: "192.168.1.210"   #eth0 
+      #FTLCONF_LOCAL_IPV4: 192.168.1.211   #wlan0
+      PIHOLE_DNS_1: 1.1.1.1
+      PIHOLE_DNS_2: 1.0.0.1  #Cloudflare
+      DHCP_ACTIVE: false  # wel of niet DHCP aanzetten
+      DNSMASQ_LISTENING: all
+      DNS_FQDN_REQUIRED: true
+      DNS_BOGUS_PRIV: true
+      DNSSEC: false
+      IPv6: false
+      PIHOLE_DOMAIN: pi210pihole
+      #REV_SERVER: true
+      #REV_SERVER_DOMAIN: myrouter.home
+      #REV_SERVER_CIDR: 192.168.1.0/24
+      #REV_SERVER_TARGET: 192.168.1.1
+      WEBTHEME: default-dark
+      WEBPASSWORD: ''
+    volumes:
+      - ./etc-pihole:/etc/pihole
+      - ./etc-dnsmasq.d:/etc/dnsmasq.d
+    #   https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
+    #cap_add:
+      #- NET_ADMIN # Required if you are using Pi-hole as your DHCP server, else not needed
   nginx:
     image: jc21/nginx-proxy-manager:latest 
     container_name: nginx
@@ -18,6 +53,7 @@ services:
       - ./nginx/data:/data
       - ./nginx/letsencrypt:/etc/letsencrypt 
       #- /etc/letsencrypt:/etc/letsencrypt
+
   portainer:
     image: portainer/portainer-ce:latest
     container_name: portainer
@@ -32,42 +68,5 @@ services:
  
   # # onderstaand gebruikt met DHCP uit, kan geen kwaad om tweede pihole te hebben met DHCP uit 
 
-  pihole:
-    image: pihole/pihole:latest
-    container_name: pihole
-    restart: unless-stopped
-    # For DHCP it is recommended to remove these ports and instead add: network_mode: "host"
-    ports:
-      - "53:53/tcp"
-      - "53:53/udp"
-      #- "67:67/udp" # Only required if you are using Pi-hole as your DHCP server
-      - "90:80"
-    environment:
-      TZ: Europe/Amsterdam
-      #FTLCONF_LOCAL_IPV4: "192.168.1.210"   #eth0 
-      #FTLCONF_LOCAL_IPV4: 192.168.1.211   #wlan0
-      PIHOLE_DNS_1: 1.1.1.1
-      PIHOLE_DNS_2: 1.0.0.1  #Cloudflare
-      PIHOLE_DNS_3: 2606:4700:4700::1111
-      PIHOLE_DNS_4: 2606:4700:4700::1001
-      DHCP_ACTIVE: false  # wel of niet DHCP aanzetten
-      DNSMASQ_LISTENING: all
-      DNS_FQDN_REQUIRED: true
-      DNS_BOGUS_PRIV: true
-      DNSSEC: false
-      IPv6: true
-      PIHOLE_DOMAIN: pi5n2pihole
-      #REV_SERVER: true
-      #REV_SERVER_DOMAIN: myrouter.home
-      #REV_SERVER_CIDR: 192.168.1.0/24
-      #REV_SERVER_TARGET: 192.168.1.1
-      WEBTHEME: default-dark
-      WEBPASSWORD: ''
-    volumes:
-      - ./etc-pihole:/etc/pihole
-      - ./etc-dnsmasq.d:/etc/dnsmasq.d
-    #   https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
-    #cap_add:
-      #- NET_ADMIN # Required if you are using Pi-hole as your DHCP server, else not needed
 
  
