--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,7 +4,9 @@ unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
 unbind C-b
-set -g prefix M-b
+#set -g prefix M-b
+#of als je caps als left control hebt geconfigeerd in powertoys:
+set -g prefix C-s
 
 set -g mouse on
 
@@ -18,8 +20,8 @@ bind '\' split-window -h
 unbind %
 unbind '"'
 
+#catppuccin config
 set -g status-position bottom
-#set -g @catppuccin_flavor 'mocha' # latte,frappe, macchiato or mocha
 set -g @catppuccin_flavor 'latte' # latte,frappe, macchiato or mocha
 
 
