tmux nvim keybindings ctrl hjkl

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -20,6 +20,7 @@ bind '\' split-window -h
 unbind %
 unbind '"'
 
+
 #catppuccin config
 set -g status-position bottom
 set -g @catppuccin_flavor 'latte' # latte,frappe, macchiato or mocha
@@ -28,7 +29,7 @@ set -g @catppuccin_flavor 'latte' # latte,frappe, macchiato or mocha
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
-
+set -g @plugin 'christoomey/vim-tmux-navigator'
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
