added tmux comment

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -37,4 +37,6 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# run first time otherwise it wont work:
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 run '~/.config/tmux/plugins/tpm/tpm'
